# valrow

./: Cargo.toml  LICENSE-MIT  Readme.md  rust-toolchain.toml
.github/workflows/: rust.yml
debug/: valrow.natvis
examples/: debugger.rs
examples/aggregates/: _aggregates.rs
examples/direct3d11/: _direct3d11.rs
examples/terrible_cpp/: _terrible_cpp.rs  ircd.cpp  ircd.rs
examples/zst_callbacks/: _zst_callbacks.rs
src/: _lib.rs  adapt.rs  borrowable.rs  field.rs  into_borrow.rs  macros.rs  opaque.rs  transmutable.rs  valrow.rs  valrow_mut.rs
